[package]
name = "hero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
# 实际项目，使用如下
# 安装开发分支代码
# cli = { git = "https://github.com/conero/uymas-rs", branch = "try", package="uymas_cli" }
cli = { version="2.0.2", path = "../../uymas/cli", package = "uymas_cli"}
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }

[features]
# 系统开发编译
log = []
