[package]
name = "uymas"
# yyyyMMdd/dev
version = "2.0.0"
edition = "2021"
authors = ["Joshua Conero"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "the binary command line tool of uymas code library"
license = "MIT"
repository = "https://github.com/conero/uymas-rs"
homepage = "https://github.com/conero/uymas-rs"
#publish = ["conero"]

[[bin]]
name = "uymas"
path = "main.rs"

[profile.release]
# https://github.com/johnthagen/min-sized-rust 参照仓库优化打包尺寸
#strip = true  # Automatically strip symbols from the binary.
strip = "symbols"

# Optimize for size.
opt-level='s'

lto = true
panic = 'abort'

codegen-units = 16
#strip = "debuginfo"

debug = false
rpath = false
incremental = false
overflow-checks = false
debug-assertions = false

[dependencies]
cli = { version="2.0.0", path = "../../uymas/cli", package = "uymas_cli"}

