[package]
name = "uymas"
# yyyyMMdd/dev
version = "2.0.1"
edition = "2021"
authors = ["Joshua Conero"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "the binary command line tool of uymas code library"
license = "MIT"
repository = "https://github.com/conero/uymas-rs"
homepage = "https://github.com/conero/uymas-rs"
#publish = ["conero"]

[[bin]]
name = "uymas"
path = "main.rs"


[dependencies]
cli = { version="2.0.1", path = "../../uymas/cli", package = "uymas_cli"}

