[package]
name = "cmd_build_min"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli = { version="2.0.0", package = "uymas_cli"}



[profile.release]
# https://github.com/johnthagen/min-sized-rust 参照仓库优化打包尺寸
strip = true  # Automatically strip symbols from the binary.

# Optimize for size.
opt-level='z'

lto = true
panic = 'abort'

codegen-units = 1
#strip = "debuginfo"