[package]
name = "uymas_cli"
version = "2.0.2"
edition = "2021"

license = "MIT"
description = "the fast and minimal dependency development tool for rust language"
repository = "https://github.com/conero/uymas-rs"
homepage = "https://github.com/conero/uymas-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#publish = ["conero"]

[lib]
path = "lib.rs"

[features]
# 命令行驱动
cli-derive = []

[dependencies]
cli_derive = { version="0.1.0", path = "../../uymas/cli_derive"}